--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
-  "name": "hoboseafood",
-  "private": true,
-  "version": "1.0.0",
-  "description": "",
-  "main": "package.json",
-  "author": "Josh Friese <josh.friese@gmail.com>",
-  "license": "UNLICENSED",
-  "scripts": {
-    "start": "sanity start",
-    "test": "sanity check"
-  },
-  "keywords": [
-    "sanity"
-  ],
-  "dependencies": {
-    "@sanity/base": "^0.131.0",
-    "@sanity/components": "^0.131.0",
-    "@sanity/core": "^0.131.0",
-    "@sanity/default-layout": "^0.131.2",
-    "@sanity/default-login": "^0.131.0",
-    "@sanity/desk-tool": "^0.131.2",
-    "prop-types": "^15.6",
-    "react": "^16.2",
-    "react-barcode": "^1.3.2",
-    "react-dom": "^16.2"
-  },
-  "devDependencies": {}
+    "name": "hoboseafood",
+    "private": true,
+    "version": "1.0.0",
+    "description": "",
+    "main": "package.json",
+    "author": "Josh Friese <josh.friese@gmail.com>",
+    "license": "UNLICENSED",
+    "scripts": {
+        "start": "sanity start",
+        "test": "sanity check"
+    },
+    "keywords": [
+        "sanity"
+    ],
+    "dependencies": {
+        "@sanity/base": "^0.131.0",
+        "@sanity/components": "^0.131.0",
+        "@sanity/core": "^0.131.0",
+        "@sanity/default-layout": "^0.131.2",
+        "@sanity/default-login": "^0.131.0",
+        "@sanity/desk-tool": "^0.131.2"
+    },
+    "devDependencies": {}
 }
