--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hoboseafood"]
 	path = hoboseafood
-	url = git:https://github.com/phist210/hoboseafood.git
+	url = https://github.com/phist210/hoboseafood.git
