--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.9",
     "@angular/router": "^6.0.9",
     "core-js": "^2.5.4",
+    "netlify-lambda": "^0.4.0",
     "normalize.css": "^8.0.0",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
