--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "core-js": "^2.5.4",
     "netlify-lambda": "^0.4.0",
     "normalize.css": "^8.0.0",
-    "rxjs": "^6.2.2",
+    "rxjs": "6.2.2",
     "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
